--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -44,6 +44,6 @@
 		accent1-alt:		darken(#5e42a6, 10),
 		accent2:			#5052b5,
 		accent2-alt:		darken(#5052b5, 10),
-		accent3:			#b74e91,
+		accent3:			#35d0bc,
 		accent3-alt:		darken(#35d0bc, 10)
 	);
