--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1721,10 +1721,10 @@
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #ecab29);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #ecab29);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #ecab29);
-				background-image: linear-gradient(to right, #5e42a6, #ecab29);
+				background-image: -moz-linear-gradient(to right, #5e42a6, #64aee3);
+				background-image: -webkit-linear-gradient(to right, #5e42a6, #64aee3);
+				background-image: -ms-linear-gradient(to right, #5e42a6, #64aee3);
+				background-image: linear-gradient(to right, #5e42a6, #64aee3);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -2482,7 +2482,7 @@
 		input[type="radio"]:checked + label:before {
 			background: #ffffff;
 			border-color: #ffffff;
-			color: #ecab29;
+			color: #64aee3;
 			content: '\f00c';
 		}
 
@@ -2579,7 +2579,7 @@
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #ecab29;
+					color: #64aee3;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
@@ -3269,7 +3269,7 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #ecab29;
+			background-color: #64aee3;
 		}
 
 		.wrapper.style3-alt {
@@ -3775,10 +3775,10 @@
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #ecab29);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #ecab29);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #ecab29);
-				background-image: linear-gradient(to right, #5e42a6, #ecab29);
+				background-image: -moz-linear-gradient(to right, #5e42a6, #64aee3);
+				background-image: -webkit-linear-gradient(to right, #5e42a6, #64aee3);
+				background-image: -ms-linear-gradient(to right, #5e42a6, #64aee3);
+				background-image: linear-gradient(to right, #5e42a6, #64aee3);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3867,7 +3867,7 @@
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #ecab29;
+							background-color: #64aee3;
 						}
 
 		}
